--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   firebase_auth: 6.1.3
   cloud_firestore: 6.1.1
   intl: 0.20.2
-  introduction_screen: 4.0.0
+  cupertino_onboarding: 1.3.0
   flutter: 
     sdk: flutter
 
