--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,10 +2,10 @@ name: consistly
 version: 1.0.0+1
 publish_to: none
 description: A new Flutter project.
-environment: 
+environment:
   sdk: ^3.8.1
 
-dependencies: 
+dependencies:
   cupertino_icons: ^1.0.8
   get: 4.7.3
   firebase_core: 4.3.0
@@ -13,24 +13,32 @@ dependencies:
   cloud_firestore: 6.1.1
   intl: 0.20.2
   cupertino_onboarding: 1.3.0
-  flutter: 
+  sp_util: 2.0.3
+  flutter_easyloading: ^3.0.5
+  flutter:
     sdk: flutter
 
-dev_dependencies: 
+dev_dependencies:
   flutter_lints: ^5.0.0
-  flutter_test: 
+  flutter_launcher_icons: "^0.14.4"
+  flutter_test:
     sdk: flutter
 
-flutter: 
-  assets: 
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/ic-app-icon.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+
+flutter:
+  assets:
     - assets/images/
   uses-material-design: true
 
-fonts: 
+fonts:
   - family: Inter
-    fonts: 
+    fonts:
       - asset: assets/fonts/Inter-Regular.ttf
       - asset: assets/fonts/Inter-Medium.ttf
       - asset: assets/fonts/Inter-Bold.ttf
       - asset: assets/fonts/Inter-SemiBold.ttf
-
